[gd_scene load_steps=5 format=2]

[ext_resource path="res://Map Editor/EditorMap.gd" type="Script" id=1]
[ext_resource path="res://Map/CameraMap.gd" type="Script" id=2]
[ext_resource path="res://Map/GridOverlay.png" type="Texture" id=3]
[ext_resource path="res://Map Editor/Brush/cursorCircle.png" type="Texture" id=4]

[node name="EditorMap" type="Node2D"]
script = ExtResource( 1 )

[node name="MapCamera" type="Camera2D" parent="."]
current = true
script = ExtResource( 2 )

[node name="GridOverlay" type="TextureRect" parent="."]
visible = false
margin_right = 150.0
margin_bottom = 150.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BrushCursor" type="Sprite" parent="."]
z_index = 128
texture = ExtResource( 4 )

[node name="CityLabels" type="CanvasLayer" parent="."]
